# VisualTracking-NX

./: README.md
docs/: README.md  env.md  structure.md
scripts/: build.sh  onnx2trt.py
src/client/: CMakeLists.txt  package.xml
src/client/config/: names.txt
src/client/launch/: camera.launch  image.launch  two_video.launch  video.launch
src/client/scripts/: window.py
src/server/: CMakeLists.txt  package.xml
src/server/configs/: mot.yaml  sot.yaml
src/server/include/mot/: ByteTrack.hpp  YOLO.hpp  object.hpp
src/server/include/sot/: HiT.hpp
src/server/launch/: server.launch  two_server.launch
src/server/scripts/: point2box.py
src/server/src/: server.cpp
src/tracking_msgs/: CMakeLists.txt  package.xml
src/tracking_msgs/srv/: Image.srv  ImageWithBoxes.srv  Point2Box.srv
